# sdl_player

./: CMakeLists.txt  main.cpp  player.cpp  player.h
